--- a/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
@@ -2,7 +2,7 @@
   <md-card-title>
     <div class="title">Customer Events</div>
     <div class="subtitle">Sessions, transactions and leads</div>
-    <md-icon>more_vert</md-icon>
+    <!--<md-icon>more_vert</md-icon>-->
   </md-card-title>
 
   <md-card-content>
