--- a/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
@@ -19,7 +19,7 @@
       (updateLimit)="updateLimit($event)">
     </table-pagination>
 
-    <md-icon class="entity-view__table-component__header__action" [class.alone]="homepageMode">more_vert</md-icon>
+    <!--<md-icon class="entity-view__table-component__header__action" [class.alone]="homepageMode">more_vert</md-icon>-->
   </div>
   <table class="highlight table__custom">
     <thead>
