--- a/src/app/pages/customers-page/customer-view/customer-transactions/customer-transactions.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-transactions/customer-transactions.component.html
@@ -14,7 +14,7 @@
       (next)="next()"
       (updateLimit)="updateLimit($event)">
     </table-pagination>
-    <md-icon class="entity-view__table-component__header__action">more_vert</md-icon>
+    <!--<md-icon class="entity-view__table-component__header__action">more_vert</md-icon>-->
   </div>
   <table class="highlight table__custom">
     <thead>
