--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
@@ -87,7 +87,7 @@
             <div class="entity-view__card__header__title">Email Template Preview</div>
             <div class="entity-view__card__header__subtitle">preview how the template will look in an email</div>
           </div>
-          <md-icon>more_vert</md-icon>
+          <!--<md-icon>more_vert</md-icon>-->
         </div>
 
         <div class="entity-view__card__content">
