--- a/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-view.component.html
+++ b/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-view.component.html
@@ -29,7 +29,7 @@
       <div class="entity-view__card">
         <div class="entity-view__card__header">
           <div class="entity-view__card__header__title">Add Merchant Provider</div>
-          <md-icon>more_vert</md-icon>
+          <!--<md-icon>more_vert</md-icon>-->
         </div>
         <form #merchantProviderInputForm="ngForm" class="entity-view__card__content">
           <md-input-container style="width: 110px" class="entity-view__card__content__item" [class.error]="formInvalid && !providerToAdd.distribution">
