--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -47,7 +47,7 @@
           <div class="entity-view__card">
             <div class="entity-view__card__header">
               <div class="entity-view__card__header__title">Settings</div>
-              <md-icon>more_vert</md-icon>
+              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div class="entity-view__card__content merchant-provider-view__details">
@@ -84,7 +84,7 @@
           <div class="entity-view__card">
             <div class="entity-view__card__header">
               <div class="entity-view__card__header__title">Processing</div>
-              <md-icon>more_vert</md-icon>
+              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div class="entity-view__card__content merchant-provider-view__details">
@@ -113,7 +113,7 @@
           <div class="entity-view__card">
             <div class="entity-view__card__header">
               <div class="entity-view__card__header__title">Gateway information</div>
-              <md-icon>more_vert</md-icon>
+              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div class="entity-view__card__content merchant-provider-view__details">
@@ -138,7 +138,7 @@
           <div class="entity-view__card">
             <div class="entity-view__card__header">
               <div class="entity-view__card__header__title">Customer Service</div>
-              <md-icon>more_vert</md-icon>
+              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div class="entity-view__card__content merchant-provider-view__details merchant-provider-view__details--align">
