--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -31,7 +31,7 @@
             <div class="profile-page__content__general__title">
               <div class="profile-page__content__general__title__main">Profile</div>
               <div class="profile-page__content__general__title__sub">general information</div>
-              <md-icon>more_vert</md-icon>
+              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div class="profile-page__content__general__data">
@@ -80,7 +80,7 @@
               <div class="profile-page__content__notifications__title">
                 <div class="profile-page__content__notifications__title__main">Devices</div>
                 <div class="profile-page__content__notifications__title__sub">Setup devices for notifications</div>
-                <md-icon>more_vert</md-icon>
+                <!--<md-icon>more_vert</md-icon>-->
               </div>
 
               <div class="profile-page__content__notifications__body">
@@ -96,7 +96,7 @@
               <div class="profile-page__content__notifications__title">
                 <div class="profile-page__content__notifications__title__main">Notification settings</div>
                 <div class="profile-page__content__notifications__title__sub">Select what notifications you want to receive</div>
-                <md-icon>more_vert</md-icon>
+                <!--<md-icon>more_vert</md-icon>-->
               </div>
 
               <div class="profile-page__content__notifications__body">
@@ -123,13 +123,13 @@
             <div class="profile-page__content__accounts__title">
               <span>Accounts</span>
               <md-input class="profile-page__content__accounts__title__input" placeholder="Filter Results" [(ngModel)]="filterValue"></md-input>
-              <md-icon>more_vert</md-icon>
+              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div *ngIf="countSelectedAccs() > 0" class="profile-page__content__accounts__selected">
               <span>{{countSelectedAccs()}} items selected</span>
               <md-icon>delete</md-icon>
-              <md-icon>more_vert</md-icon>
+              <!--<md-icon>more_vert</md-icon>-->
             </div>
 
             <div class="profile-page__content__accounts__table">
