--- a/src/app/pages/trackers-page/tracker-view/tracker-view.component.html
+++ b/src/app/pages/trackers-page/tracker-view/tracker-view.component.html
@@ -45,7 +45,7 @@
       <div class="tracker-view__card">
         <div class="tracker-view__card__header">
           <div class="tracker-view__card__header__main">Tracker Details</div>
-          <md-icon>more_vert</md-icon>
+          <!--<md-icon>more_vert</md-icon>-->
         </div>
 
         <div class="tracker-view__card__content">
