--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -27,7 +27,7 @@
           <md-card-title class="transaction-view__content__title">
             <div class="transaction-view__content__title__main">Transaction details</div>
             <div class="transaction-view__content__title__sub">general information</div>
-            <md-icon class="transaction-view__content__title__icon">more_vert</md-icon>
+            <!--<md-icon class="transaction-view__content__title__icon">more_vert</md-icon>-->
           </md-card-title>
 
           <md-card-content>
@@ -58,7 +58,7 @@
           <md-card-title class="transaction-view__content__title">
             <div class="transaction-view__content__title__main">Product information</div>
             <div class="transaction-view__content__title__sub">Products sold this transaction</div>
-            <md-icon class="transaction-view__content__title__icon">more_vert</md-icon>
+            <!--<md-icon class="transaction-view__content__title__icon">more_vert</md-icon>-->
           </md-card-title>
 
           <md-card-content>
@@ -76,7 +76,7 @@
         <md-card>
           <md-card-title class="transaction-view__content__title">
             <div class="transaction-view__content__title__main">Transaction response</div>
-            <md-icon class="transaction-view__content__title__icon">more_vert</md-icon>
+            <!--<md-icon class="transaction-view__content__title__icon">more_vert</md-icon>-->
           </md-card-title>
 
           <md-card-content>
@@ -94,7 +94,7 @@
         <md-card>
           <md-card-title class="transaction-view__content__title">
             <div class="transaction-view__content__title__main">Rebill information</div>
-            <md-icon class="transaction-view__content__title__icon">more_vert</md-icon>
+            <!--<md-icon class="transaction-view__content__title__icon">more_vert</md-icon>-->
           </md-card-title>
 
           <md-card-content>
