Enable user acl edit/delete

--- a/src/app/pages/users-page/user-view/user-view.component.html
+++ b/src/app/pages/users-page/user-view/user-view.component.html
@@ -93,11 +93,15 @@
         <table-memory
           class="user-view__acls-table"
           *ngIf="!addMode"
+          [textOptions]="text"
           [data]="entity.acls || []"
           [columnParams]="aclColumnParams"
           [title]="'Acl'"
           [associateDataMapper]="aclMapper"
           [customAssociation]="true"
+          [editEnabled]="true"
+          (edit)="showEditAclModal($event)"
+          (view)="navigateToAccount($event)"
           (associate)="showAddAclModal()"
           (disassociate)="removeAcl($event)">
         </table-memory>
