--- a/src/app/pages/components/table-actions/table-actions.component.html
+++ b/src/app/pages/components/table-actions/table-actions.component.html
@@ -5,4 +5,5 @@
   <button *ngIf="showDelete" md-menu-item (click)="deleteClicked.emit(true)">delete</button>
   <button *ngIf="showCopy" md-menu-item (click)="copyClicked.emit(true)">copy</button>
   <button *ngIf="showExport" md-menu-item (click)="exportClicked.emit(true)">export</button>
+  <button *ngIf="customText" md-menu-item (click)="customClicked.emit(true)">{{customText}}</button>
 </md-menu>
