Fix add user to account logic

--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -59,6 +59,7 @@
         [associateDataMapper]="aclMapper"
         [customAssociation]="true"
         [editEnabled]="true"
+        [ignoreDisassociate]="isOwner"
         (view)="navigateToUser($event)"
         (associate)="showAddAclModal()"
         (disassociate)="removeAcl($event)"
