Fix edit/remove acl from user

--- a/src/app/pages/users-page/user-view/user-view.component.html
+++ b/src/app/pages/users-page/user-view/user-view.component.html
@@ -100,6 +100,7 @@
           [associateDataMapper]="aclMapper"
           [customAssociation]="true"
           [editEnabled]="true"
+          [ignoreDisassociate]="isOwner"
           (edit)="showEditAclModal($event)"
           (view)="navigateToAccount($event)"
           (associate)="showAddAclModal()"
