--- a/src/app/pages/users-page/user-view/user-view.component.html
+++ b/src/app/pages/users-page/user-view/user-view.component.html
@@ -101,6 +101,7 @@
           [customAssociation]="true"
           [editEnabled]="true"
           [ignoreDisassociate]="isOwner"
+          [hasWritePermission]="aclService.hasWritePermission()"
           (edit)="showEditAclModal($event)"
           (view)="navigateToAccount($event)"
           (associate)="showAddAclModal()"
