--- a/src/app/pages/products-page/product-view/product-view.component.html
+++ b/src/app/pages/products-page/product-view/product-view.component.html
@@ -86,7 +86,7 @@
     </md-tab>
 
     <md-tab>
-      <product-product-schedules [id]="entity.id"></product-product-schedules>
+      <product-product-schedules [id]="entity.id" [price]="entity.defaultPrice.amount + ''"></product-product-schedules>
     </md-tab>
 
     <md-tab>
