--- a/src/assets/scss/_dialogs.scss
+++ b/src/assets/scss/_dialogs.scss
@@ -31,3 +31,12 @@ associate-dialog {
 md-dialog-container {
   overflow: visible !important;
 }
+
+.add-schedule--modal {
+
+  .entity-view__card {
+    box-shadow: none;
+    margin: 0;
+  }
+
+}
